#250712. #7.2 Server Side Client #7.3 Action Function 적용용

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
-    "@supabase/supabase-js": "^2.50.3",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.50.5",
     "@tanstack/react-table": "^8.21.3",
     "@types/canvas-confetti": "^1.9.0",
     "canvas-confetti": "^1.9.3",
