--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
+    "resend": "^4.7.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7"
@@ -54,6 +55,7 @@
     "@types/react-dom": "^19.1.2",
     "autoprefixer": "^10.4.21",
     "drizzle-kit": "^0.31.4",
+    "esbuild": "^0.25.6",
     "postcss": "^8.5.6",
     "supabase": "^2.30.4",
     "typescript": "^5.8.3",
