--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "resend": "^4.7.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
