--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@
 /build/
 
 # React Email
-/react-email-starter/
+#/react-email-starter/ # vercel에서 배포할 때 사용해야하기 때문에 vercel-github 연동을 위해 github에 배포 필요.
+/react-email-starter/node_modules
