--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^0.3.2",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "@supabase/ssr": "^0.6.1",
